<resources>
    <string name="app_name">Bondzu</string>

    <string name="title_activity_live_streaming">LiveStreamingActivity</string>
    <string name="camera_title">Cámaras</string>
    <string name="camera_error">Se ha encontrado un error mientras se accedia a las cámaras, vuelva a intentar</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_adoptions</item>
        <item>@string/nav_item_activity</item>
        <item>@string/nav_item_payment</item>
        <item>@string/nav_item_logout</item>

    </string-array>

    <string-array name="nav_drawer_imgs">
        <item>@drawable/ic_home_black_24dp</item>
        <item>@drawable/ic_paw_black_24dp</item>
        <item>@drawable/ic_activity_black_24dp</item>
        <item>@drawable/ic_credit_card_black_24dp</item>
        <item>@drawable/ic_logout_black_24dp</item>
    </string-array>


    <string name="nav_item_home">Inicio</string>
    <string name="nav_item_adoptions">Adopciones</string>
    <string name="nav_item_activity">Registro de actividad</string>
    <string name="nav_item_payment">Pagos</string>
    <string name="nav_item_logout">Cerrar Sesión</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="recommeded_price">El precio de este producto</string>
    <string name="label_product_desc">Este producto ofrece...</string>
    <string name="simple_error_title">!Oops al parecer algo ocurrio mal</string>
    <string name="products_error_message">No se pudieron desplegar los productos, por favor vuelva a intentarlo</string>
    <string name="card_details_title">Detalles de la Tarjeta</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="card_number">Número de la Tarjeta</string>
    <string name="card_amount">Precio (mxn)</string>
    <string name="cv">CV</string>
    <string name="exp_date">Fecha de exp.</string>
    <string name="card_details_verification">Hay datos faltantes que son requeridos</string>
    <string name="card_error_title">!Oops error en la tarjeta</string>
    <string name="success">Éxito</string>
    <string name="err_card_parse">Un error ha ocurrido durante la transacción</string>
    <string name="simple_error_message">Se ha presentado un inconveniente, por favor intente otravez</string>
    <string name="no_data">No hay datos que mostrar</string>
    <string name="characteristics">Características</string>
    <string name="label_adopters">Adoptadores</string>
    <string name="label_more">MÁS</string>
    <string name="go_live">VER EN VIVO</string>
    <string name="keeper_label">Cuidadores</string>
    <string name="thanks">Gracias por adoptarme, te lo agradecere eternamente</string>
    <string name="cancel">Cancelar</string>
    <string name="no_events">No hay eventos que mostrar</string>
    <string name="title_activity_independent_message">Comentarios</string>
    <string name="title_activity_catalogue">Catálogo</string>

    <!-- Login -->
    <string name="title_activity_login">Log In</string>
    <string name="login_name">Log In!</string>
    <string name="login_error_message">Por favor asegurate de ingresar el email y password</string>
    <string name="login_error_title">Error al hacer Log In</string>

    <!-- Sign up -->
    <string name="sign_up_btn">ÚNETE</string>
    <string name="sign_up_error_message">Por favor asegurate que hayas ingresado el nombre, apellido, email y password</string>
    <string name="sign_up_error_title">Error al registrarse</string>
    <string name="facebook">ÚNETE USANDO FACEBOOK</string>
    <string name="facebook_app_id">721077627906410</string>
    
    <string name="go_login_message">Ya tienes una cuenta? Log In!</string>
    <string name="title_activity_home">Inicio</string>
    <string name="title_activity_events">Eventos</string>
    <string name="title_activity_adoptions">Adopciones</string>
    <string name="title_activity_payment_history_acvity">Historial de pagos</string>
    <string name="no_adoptions">No tienes ningún animal adoptado, anímate</string>
    <string name="no_history">No tienes ningún pago registrado</string>

    <string name="title_activity_payment">Tarjetas registradas</string>
    <string name="no_cards">No tienes ninguna tarjeta registrada</string>
    <string name="title_activity_dialog_card">DialogCard</string>
    <string name="new_card">Nueva Tarjeta</string>
    <string name="title_activity_complete_gifts">Tienda de Regalos</string>

    <!-- Youtube -->
    <string name="error_player">Ocurrió un error al usar YouTube (%1$s)</string>
    <string name="add_calendar">AGREGAR AL CALENDARIO</string>
    <string name="select_card">Usted ya tiene tarjetas registradas, selecciona una</string>

    <!--Card Errors -->
    <string name="no_email_clients">Usted no tiene provedores de email instalados.</string>
    <string name="date_format">dd/MM/yyyy hh:mm</string>
    <string name="about_title">ACERCA DE</string>
    <string name="community_title">COMUNIDAD</string>
    <string name="gallery_title">GALERÍA</string>
    <string name="gifts_title">REGALOS</string>
    <string name="adoption_message">"Tu has adoptado a "</string>
    <string name="charge_description">"Regalos / Donaciones - "</string>

    <!--Card Errors -->
    <string name="registered_card">Esta tarjeta ya ha sido registrada</string>
    <string name="thanks_for_helping">Gracias por tu ayuda</string>
    <string name="incomplete_charge">No se pudo completar la compra</string>
    <string name="incorrect_number">El número de tarjeta es incorrecto.</string>
    <string name="invalid_number">El número de tarjeta no es válido</string>
    <string name="invalid_expiry_month">El mes de expiración no es válido .</string>
    <string name="invalid_expiry_year">El ano de expiración no es válido.</string>
    <string name="invalid_cvc">El código de seguridad no es válido</string>
    <string name="expired_card">La tarjeta ha expirado.</string>
    <string name="incorrect_cvc">El código de seguridad es incorrecto.</string>
    <string name="card_declined">La tarjeta ha sido rechazada.</string>
    <string name="processing_error">Un error ha ocurrido mientras se procesaba la tarjeta.</string>
    <string name="default_card_error">Un error ha ocurrido mientras se procesaba la tarjeta.</string>

    <string name="video">VIDEOS</string>
    <string name="facebook_cancel">Usted ha cancelado hacer login con Facebook.</string>
    <string name="error_parsing_facebook">"Error al obtener datos de Facebook. "</string>
    <string name="authentication_error">"Error de autentificación : "</string>
    <string name="try_again_facebook">"Vuelve a intentarlo. "</string>
    <string name="other_facebook_error">"Error con Facebook : "</string>
    <string name="or">o</string>
    <string name="add_new_card">Agregar una nueva tarjeta</string>
    <string name="about_us_title">Acerca de nosotros</string>
    <string name="reply_text">Responder</string>
    <string name="report_text">Reportar</string>
    <string name="sign_up_password">Tu password debe tener un mínimo de 5 caracteres</string>
    <string name="no_internet">Se necesita de una conexión a internet</string>
    <string name="no_wifi">Te recomendamos que actives tu WIFI para tener una mejor experiencia</string>
    <string name="forgot_password">No recuerdas tu password?</string>
    <string name="forgot_error">Debes de ingresar tu email</string>
    <string name="forgot_success">Se ha enviado un correo exitosamente con el link para modificar tu password</string>
    <string name="forgot_fail">Ha ocurrido un error no se pudo enviar el link para modificar tu password</string>
    <string name="population">Población</string>


    <!-- Resources Internationalization -->
    <!-- Field Animal-->
    <string name="KEY_ANIMALV2_NAME">name</string>
    <string name="KEY_ANIMAL_ABOUT">about</string>
    <string name="KEY_ANIMAL_CHARACTERISTICS">characteristics</string>
    <string name="KEY_ANIMAL_SPECIES">species</string>
    <!-- Field Products-->
    <string name="KEY_PRODUCT_NAME">nombre</string>
    <string name="KEY_PRODUCT_DESCRIPTION">descripcion</string>
    <string name="KEY_PRODUCT_INFO">info</string>
    <string name="KEY_PRODUCT_INFO_AMOUNT">info_ammount</string>
    <string name="KEY_PRODUCT_CATEGORY">categoria</string>
    <!-- Field Event-->
    <string name="KEY_EVENT_TITLE">title</string>
    <string name="KEY_EVENT_DESCRIPTION">description</string>
    <!-- Field Video-->
    <string name="KEY_VIDEO_TITLES">titles</string>
    <string name="KEY_VIDEO_DESCRIPTIONS">descriptions</string>
    <string name="search_title">Busca</string>
    <string name="search_hint">Busca</string>
    <string name="title_privacy">Aviso de Privacidad</string>
    <string name="privacy_content">Checa nuestra politica de privacidad y nuestros terminos y condiciones en www.bondzu.com</string>

</resources>
